# exp_fingerprint

./: .gitignore
llm_fingerprint_framework/: README.md  digest.txt  pyproject.toml  requirements.txt
llm_fingerprint_framework/configs/experiments/: example_benchmark.yaml  main_10fp_all_methods.yaml  normal_unified_five_methods.yaml  smoke_all_methods.yaml  smoke_unified_five_methods.yaml  trap_llama2_100fp_500steps.yaml  trap_qwen25_100fp_500steps.yaml
llm_fingerprint_framework/configs/methods/: llmprint.yaml  llmprint_10fp.yaml  plugae.yaml  proflingo.yaml  proflingo_10fp.yaml  smoke_llmprint.yaml  smoke_plugae.yaml  smoke_proflingo.yaml  smoke_sraf.yaml  smoke_trap.yaml  sraf.yaml  sraf_10fp.yaml  sraf_paper_best_example.yaml  trap.yaml  trap_100fp_500steps.yaml  trap_10fp.yaml
llm_fingerprint_framework/configs/models/: README.md  paper_guanaco_13b.yaml  paper_guanaco_7b.yaml  paper_llama2_13b_chat.yaml  paper_sheared_llama2_27b_pruned.yaml  paper_vicuna_13b_v13.yaml  paper_vicuna_7b_v13.yaml  server_gemma_7b_it.yaml  (+4 more)
llm_fingerprint_framework/data/: README.md  llmprint_token_pairs.jsonl  llmprint_token_pairs_paper.jsonl  plugae_queries.jsonl  proflingo_questions.jsonl  proflingo_questions_paper.jsonl
llm_fingerprint_framework/scripts/: collect_results.py  fill_successful_trap_fingerprints.py  run_smoke_all.sh
llm_fingerprint_framework/tests/: test_cli.py  test_experiment_memory.py  test_imports.py  test_io.py  test_matching.py  test_model_backend.py  test_plugae.py  test_prompt_templates.py  test_raw_records.py  test_sraf.py  test_tables.py
(+32 files in other folders)
