[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fingerprint-framework"
version = "0.1.0"
description = "Unified research framework for adversarial-prompt LLM fingerprinting methods."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "sentencepiece",
  "numpy",
  "pandas",
  "pyyaml",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
